# demo

./: .gitignore  README.md  pyproject.toml
src/mcp_calculator_kel/: server.py
src/mcp_weather_server/: __init__.py  __main__.py  server.py
