[project]
name = "mcp-weather-server"
version = "1.0.0"
description = "A Model Context Protocol (MCP) server for weather information"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "build>=1.2.2.post1",
    "html2text>=2024.2.26",
    "mcp[cli]>=1.2.0",
    "requests>=2.32.3",
    "twine>=6.1.0",
]

[project.scripts]
mcp-weather-server = "mcp_weather_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
